#feature: data is saved to localStorage

--- a/index.html
+++ b/index.html
@@ -155,6 +155,10 @@
         <script src="./assets/js/GeoFormHandler.js" defer></script>
         
         <script src="./assets/js/updateLatLangList.js" defer></script>
+
+        <script src="./assets/js/saveToLocalStorage.js" defer></script>
+
+        <script src="./assets/js/loadFromLocalStorage.js" defer></script>
         
         <script src="./assets/js/app.js" defer></script> 
 
